[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/HUD.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=3]


[node name="HUD" type="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 12.0
margin_top = 11.0
margin_right = 204.0
margin_bottom = 55.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -120, -11 )
scale = Vector2( 1, 1.34091 )
texture = ExtResource( 1 )
centered = false

[node name="Time" type="RichTextLabel" parent="."]
margin_left = -112.0
margin_top = -2.0
margin_right = -36.0
margin_bottom = 18.0
custom_fonts/normal_font = ExtResource( 2 )
text = "TIME:"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeSeconds" type="RichTextLabel" parent="."]
margin_left = -94.0
margin_top = 22.0
margin_right = -40.0
margin_bottom = 42.0
custom_fonts/normal_font = ExtResource( 2 )
text = "00"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="RichTextLabel" parent="."]
margin_left = -13.0
margin_top = -2.0
margin_right = 67.0
margin_bottom = 17.0
custom_fonts/normal_font = ExtResource( 2 )
text = "SCORE:"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActualScore" type="RichTextLabel" parent="."]
margin_left = -5.0
margin_top = 22.0
margin_right = 60.0
margin_bottom = 47.0
custom_fonts/normal_font = ExtResource( 2 )
text = "0000"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SecondTimer" type="Timer" parent="."]
autostart = true
[connection signal="timeout" from="SecondTimer" to="." method="_on_SecondTimer_timeout"]
